--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework</groupId>
     <artifactId>sample-hello-world</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <version>0.2.0</version>
 
     <!-- tag::joda[] -->
