--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework</groupId>
-    <artifactId>sample-hello-world</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>hello</artifactId>
+    <packaging>war</packaging>
     <version>0.2.0</version>
 
     <!-- tag::joda[] -->
